<resources>
    <string name="app_name">Currency Converter</string>
    <string name="convert">Convert</string>
    <string name="get_rate_alerts_straight_to_your_email_inbox">Get rate alerts straight to your email inbox</string>
    <string name="past_90_days">Past 90 days</string>
    <string name="past_30_days">Past 30 days</string>
    <string name="mid_market_exchange_rate_at_13_28_utc">Mid market exchange rate at 13:28 UTC</string>
    <string name="currency_calculator">Currency Calculator</string>
    <string name="sign_up">Sign up</string>
</resources>