<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/info_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_notes_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="@id/info_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/info_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currency_calculator_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/currency_calculator"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_currency_value_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_line_spacing"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currency_calculator_textView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EUR"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_currency_value_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_line_spacing"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_currency_value_wrapper">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.264"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PLN"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/currency_choice_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_line_spacing"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_currency_value_wrapper">


            <Spinner
                android:id="@+id/first_currency_spinner"
                style="@style/edit"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:background="@drawable/spinner"
                android:spinnerMode="dropdown" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_sync_alt_24"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="15dp" />

            <Spinner
                android:id="@+id/second_currency_spinner"
                style="@style/edit"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:background="@drawable/spinner"
                android:spinnerMode="dropdown" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/convert_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/double_line_spacing"
            android:text="@string/convert"
            android:textSize="@dimen/button_view_text_size"
            android:textColor="@color/purple_500"
            android:clickable="false"
            android:background="@color/teal_200"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currency_choice_wrapper"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mid_market_rate_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textSize="@dimen/button_view_text_size"
            android:textColor="@color/purple_200"
            android:background="?android:selectableItemBackground"
            android:text="@string/mid_market_exchange_rate_at_13_28_utc"
            app:layout_constraintTop_toBottomOf="@id/convert_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mid_market_info_ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_baseline_info_24"
            app:layout_constraintStart_toEndOf="@id/mid_market_rate_textView"
            app:layout_constraintTop_toTopOf="@id/mid_market_rate_textView"
            app:layout_constraintBottom_toBottomOf="@id/mid_market_rate_textView"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_view_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mid_market_rate_textView"
            >

            <TextView
                android:id="@+id/thirty_days_chart_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_30_days"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ninty_days_chart_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_90_days"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/chart_imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/single_line_spacing"
                app:layout_constraintTop_toBottomOf="@id/thirty_days_chart_textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rate_alerts_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="10dp"
                android:textSize="@dimen/button_view_text_size"
                android:textColor="@color/purple_200"
                android:background="?android:selectableItemBackground"
                android:text="@string/get_rate_alerts_straight_to_your_email_inbox"
                app:layout_constraintTop_toBottomOf="@id/chart_imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>